Fix z-index stacking issue in checkout

--- a/ui/less/frontend.less
+++ b/ui/less/frontend.less
@@ -178,6 +178,9 @@
 }
 
 #mp-checkout {
+	position: relative;
+		z-index: 1;
+		
 	.mp-checkout-form-row {
 		margin-bottom: 15px;
 		
